// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseListFilters correctly 1`] = `
<Provider
  store={
    Object {
      "@@observable": [Function],
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <ExpenseListFilters>
    <div>
      <input
        onChange={[Function]}
        type="text"
        value=""
      />
      <select
        onChange={[Function]}
        value="date"
      >
        <option
          value="date"
        >
          Date
        </option>
        <option
          value="amount"
        >
          Amount
        </option>
      </select>
      <DateRangePicker
        calendarIcon={
          <svg
            className="react-daterange-picker__calendar-button__icon react-daterange-picker__button__icon"
            height={19}
            stroke="black"
            strokeWidth={2}
            viewBox="0 0 19 19"
            width={19}
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="15"
              width="15"
              x="2"
              y="2"
            />
            <line
              x1="6"
              x2="6"
              y1="0"
              y2="4"
            />
            <line
              x1="13"
              x2="13"
              y1="0"
              y2="4"
            />
          </svg>
        }
        clearIcon={
          <svg
            className="react-daterange-picker__clear-button__icon react-daterange-picker__button__icon"
            height={19}
            stroke="black"
            strokeWidth={2}
            viewBox="0 0 19 19"
            width={19}
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="4"
              x2="15"
              y1="4"
              y2="15"
            />
            <line
              x1="15"
              x2="4"
              y1="4"
              y2="15"
            />
          </svg>
        }
        closeCalendar={true}
        isOpen={null}
        name="daterange"
        onChange={[Function]}
        openCalendarOnFocus={true}
        rangeDivider="–"
        value={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <div
          className="react-daterange-picker react-daterange-picker--closed react-daterange-picker--enabled"
          onFocus={[Function]}
        >
          <div
            className="react-daterange-picker__wrapper"
          >
            <DateInput
              className="react-daterange-picker__inputGroup"
              isCalendarOpen={null}
              maxDetail="month"
              name="daterange_from"
              onChange={[Function]}
              returnValue="start"
            >
              <div
                className="react-daterange-picker__inputGroup"
                onClick={[Function]}
              >
                <NativeInput
                  key="date"
                  maxDate={+275760-09-13T00:00:00.000Z}
                  minDate={0000-12-31T23:40:28.000Z}
                  name="daterange_from"
                  onChange={[Function]}
                  valueType="day"
                >
                  <input
                    max="275760-09-13"
                    min="0001-01-01"
                    name="daterange_from"
                    onChange={[Function]}
                    onFocus={[Function]}
                    style={
                      Object {
                        "position": "absolute",
                        "visibility": "hidden",
                        "zIndex": "-999",
                      }
                    }
                    type="date"
                    value=""
                  />
                </NativeInput>
                <MonthInput
                  className="react-daterange-picker__inputGroup"
                  inputRef={
                    Object {
                      "current": <input
                        autocomplete="off"
                        class="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__month"
                        data-input="true"
                        inputmode="numeric"
                        max="12"
                        min="1"
                        name="month"
                        placeholder="--"
                        type="number"
                        value=""
                      />,
                    }
                  }
                  key="month"
                  maxDate={+275760-09-13T00:00:00.000Z}
                  minDate={0000-12-31T23:40:28.000Z}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  required={null}
                  value={null}
                  year={null}
                >
                  <Input
                    className="react-daterange-picker__inputGroup"
                    inputRef={
                      Object {
                        "current": <input
                          autocomplete="off"
                          class="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__month"
                          data-input="true"
                          inputmode="numeric"
                          max="12"
                          min="1"
                          name="month"
                          placeholder="--"
                          type="number"
                          value=""
                        />,
                      }
                    }
                    max={12}
                    min={1}
                    name="month"
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    required={null}
                    value={null}
                  >
                    <input
                      autoComplete="off"
                      className="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__month"
                      data-input="true"
                      inputMode="numeric"
                      key="input"
                      max={12}
                      min={1}
                      name="month"
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onKeyUp={[Function]}
                      placeholder="--"
                      required={null}
                      type="number"
                      value=""
                    />
                  </Input>
                </MonthInput>
                <Divider
                  key="separator_1"
                >
                  <span
                    className="react-date-picker__inputGroup__divider"
                  >
                    /
                  </span>
                </Divider>
                <DayInput
                  autoFocus={false}
                  className="react-daterange-picker__inputGroup"
                  inputRef={
                    Object {
                      "current": <input
                        autocomplete="off"
                        class="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__day"
                        data-input="true"
                        inputmode="numeric"
                        max="31"
                        min="1"
                        name="day"
                        placeholder="--"
                        type="number"
                        value=""
                      />,
                    }
                  }
                  key="day"
                  maxDate={+275760-09-13T00:00:00.000Z}
                  minDate={0000-12-31T23:40:28.000Z}
                  month={null}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  required={null}
                  value={null}
                  year={null}
                >
                  <Input
                    autoFocus={false}
                    className="react-daterange-picker__inputGroup"
                    inputRef={
                      Object {
                        "current": <input
                          autocomplete="off"
                          class="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__day"
                          data-input="true"
                          inputmode="numeric"
                          max="31"
                          min="1"
                          name="day"
                          placeholder="--"
                          type="number"
                          value=""
                        />,
                      }
                    }
                    max={31}
                    min={1}
                    name="day"
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    required={null}
                    value={null}
                  >
                    <input
                      autoComplete="off"
                      autoFocus={false}
                      className="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__day"
                      data-input="true"
                      inputMode="numeric"
                      key="input"
                      max={31}
                      min={1}
                      name="day"
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onKeyUp={[Function]}
                      placeholder="--"
                      required={null}
                      type="number"
                      value=""
                    />
                  </Input>
                </DayInput>
                <Divider
                  key="separator_2"
                >
                  <span
                    className="react-date-picker__inputGroup__divider"
                  >
                    /
                  </span>
                </Divider>
                <YearInput
                  autoFocus={false}
                  className="react-daterange-picker__inputGroup"
                  inputRef={
                    Object {
                      "current": <input
                        autocomplete="off"
                        class="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__year"
                        data-input="true"
                        inputmode="numeric"
                        max="275760"
                        min="1"
                        name="year"
                        placeholder="----"
                        step="1"
                        type="number"
                        value=""
                      />,
                    }
                  }
                  key="year"
                  maxDate={+275760-09-13T00:00:00.000Z}
                  minDate={0000-12-31T23:40:28.000Z}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  required={null}
                  value={null}
                  valueType="day"
                >
                  <Input
                    autoFocus={false}
                    className="react-daterange-picker__inputGroup"
                    inputRef={
                      Object {
                        "current": <input
                          autocomplete="off"
                          class="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__year"
                          data-input="true"
                          inputmode="numeric"
                          max="275760"
                          min="1"
                          name="year"
                          placeholder="----"
                          step="1"
                          type="number"
                          value=""
                        />,
                      }
                    }
                    max={275760}
                    min={1}
                    name="year"
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    placeholder="----"
                    required={null}
                    step={1}
                    value={null}
                  >
                    <input
                      autoComplete="off"
                      autoFocus={false}
                      className="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__year"
                      data-input="true"
                      inputMode="numeric"
                      key="input"
                      max={275760}
                      min={1}
                      name="year"
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onKeyUp={[Function]}
                      placeholder="----"
                      required={null}
                      step={1}
                      type="number"
                      value=""
                    />
                  </Input>
                </YearInput>
              </div>
            </DateInput>
            <span
              className="react-daterange-picker__range-divider"
            >
              –
            </span>
            <DateInput
              className="react-daterange-picker__inputGroup"
              isCalendarOpen={null}
              maxDetail="month"
              name="daterange_to"
              onChange={[Function]}
              returnValue="end"
            >
              <div
                className="react-daterange-picker__inputGroup"
                onClick={[Function]}
              >
                <NativeInput
                  key="date"
                  maxDate={+275760-09-13T00:00:00.000Z}
                  minDate={0000-12-31T23:40:28.000Z}
                  name="daterange_to"
                  onChange={[Function]}
                  valueType="day"
                >
                  <input
                    max="275760-09-13"
                    min="0001-01-01"
                    name="daterange_to"
                    onChange={[Function]}
                    onFocus={[Function]}
                    style={
                      Object {
                        "position": "absolute",
                        "visibility": "hidden",
                        "zIndex": "-999",
                      }
                    }
                    type="date"
                    value=""
                  />
                </NativeInput>
                <MonthInput
                  className="react-daterange-picker__inputGroup"
                  inputRef={
                    Object {
                      "current": <input
                        autocomplete="off"
                        class="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__month"
                        data-input="true"
                        inputmode="numeric"
                        max="12"
                        min="1"
                        name="month"
                        placeholder="--"
                        type="number"
                        value=""
                      />,
                    }
                  }
                  key="month"
                  maxDate={+275760-09-13T00:00:00.000Z}
                  minDate={0000-12-31T23:40:28.000Z}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  required={null}
                  value={null}
                  year={null}
                >
                  <Input
                    className="react-daterange-picker__inputGroup"
                    inputRef={
                      Object {
                        "current": <input
                          autocomplete="off"
                          class="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__month"
                          data-input="true"
                          inputmode="numeric"
                          max="12"
                          min="1"
                          name="month"
                          placeholder="--"
                          type="number"
                          value=""
                        />,
                      }
                    }
                    max={12}
                    min={1}
                    name="month"
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    required={null}
                    value={null}
                  >
                    <input
                      autoComplete="off"
                      className="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__month"
                      data-input="true"
                      inputMode="numeric"
                      key="input"
                      max={12}
                      min={1}
                      name="month"
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onKeyUp={[Function]}
                      placeholder="--"
                      required={null}
                      type="number"
                      value=""
                    />
                  </Input>
                </MonthInput>
                <Divider
                  key="separator_1"
                >
                  <span
                    className="react-date-picker__inputGroup__divider"
                  >
                    /
                  </span>
                </Divider>
                <DayInput
                  autoFocus={false}
                  className="react-daterange-picker__inputGroup"
                  inputRef={
                    Object {
                      "current": <input
                        autocomplete="off"
                        class="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__day"
                        data-input="true"
                        inputmode="numeric"
                        max="31"
                        min="1"
                        name="day"
                        placeholder="--"
                        type="number"
                        value=""
                      />,
                    }
                  }
                  key="day"
                  maxDate={+275760-09-13T00:00:00.000Z}
                  minDate={0000-12-31T23:40:28.000Z}
                  month={null}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  required={null}
                  value={null}
                  year={null}
                >
                  <Input
                    autoFocus={false}
                    className="react-daterange-picker__inputGroup"
                    inputRef={
                      Object {
                        "current": <input
                          autocomplete="off"
                          class="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__day"
                          data-input="true"
                          inputmode="numeric"
                          max="31"
                          min="1"
                          name="day"
                          placeholder="--"
                          type="number"
                          value=""
                        />,
                      }
                    }
                    max={31}
                    min={1}
                    name="day"
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    required={null}
                    value={null}
                  >
                    <input
                      autoComplete="off"
                      autoFocus={false}
                      className="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__day"
                      data-input="true"
                      inputMode="numeric"
                      key="input"
                      max={31}
                      min={1}
                      name="day"
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onKeyUp={[Function]}
                      placeholder="--"
                      required={null}
                      type="number"
                      value=""
                    />
                  </Input>
                </DayInput>
                <Divider
                  key="separator_2"
                >
                  <span
                    className="react-date-picker__inputGroup__divider"
                  >
                    /
                  </span>
                </Divider>
                <YearInput
                  autoFocus={false}
                  className="react-daterange-picker__inputGroup"
                  inputRef={
                    Object {
                      "current": <input
                        autocomplete="off"
                        class="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__year"
                        data-input="true"
                        inputmode="numeric"
                        max="275760"
                        min="1"
                        name="year"
                        placeholder="----"
                        step="1"
                        type="number"
                        value=""
                      />,
                    }
                  }
                  key="year"
                  maxDate={+275760-09-13T00:00:00.000Z}
                  minDate={0000-12-31T23:40:28.000Z}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  required={null}
                  value={null}
                  valueType="day"
                >
                  <Input
                    autoFocus={false}
                    className="react-daterange-picker__inputGroup"
                    inputRef={
                      Object {
                        "current": <input
                          autocomplete="off"
                          class="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__year"
                          data-input="true"
                          inputmode="numeric"
                          max="275760"
                          min="1"
                          name="year"
                          placeholder="----"
                          step="1"
                          type="number"
                          value=""
                        />,
                      }
                    }
                    max={275760}
                    min={1}
                    name="year"
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    placeholder="----"
                    required={null}
                    step={1}
                    value={null}
                  >
                    <input
                      autoComplete="off"
                      autoFocus={false}
                      className="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__year"
                      data-input="true"
                      inputMode="numeric"
                      key="input"
                      max={275760}
                      min={1}
                      name="year"
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onKeyUp={[Function]}
                      placeholder="----"
                      required={null}
                      step={1}
                      type="number"
                      value=""
                    />
                  </Input>
                </YearInput>
              </div>
            </DateInput>
            <button
              className="react-daterange-picker__clear-button react-daterange-picker__button"
              onClick={[Function]}
              onFocus={[Function]}
              type="button"
            >
              <svg
                className="react-daterange-picker__clear-button__icon react-daterange-picker__button__icon"
                height={19}
                stroke="black"
                strokeWidth={2}
                viewBox="0 0 19 19"
                width={19}
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="4"
                  x2="15"
                  y1="4"
                  y2="15"
                />
                <line
                  x1="15"
                  x2="4"
                  y1="4"
                  y2="15"
                />
              </svg>
            </button>
            <button
              className="react-daterange-picker__calendar-button react-daterange-picker__button"
              onClick={[Function]}
              onFocus={[Function]}
              type="button"
            >
              <svg
                className="react-daterange-picker__calendar-button__icon react-daterange-picker__button__icon"
                height={19}
                stroke="black"
                strokeWidth={2}
                viewBox="0 0 19 19"
                width={19}
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="none"
                  height="15"
                  width="15"
                  x="2"
                  y="2"
                />
                <line
                  x1="6"
                  x2="6"
                  y1="0"
                  y2="4"
                />
                <line
                  x1="13"
                  x2="13"
                  y1="0"
                  y2="4"
                />
              </svg>
            </button>
          </div>
        </div>
      </DateRangePicker>
    </div>
  </ExpenseListFilters>
</Provider>
`;

exports[`should render ExpenseListFilters with alt data correctly 1`] = `
<Provider
  store={
    Object {
      "@@observable": [Function],
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <ExpenseListFilters>
    <div>
      <input
        onChange={[Function]}
        type="text"
        value="bills"
      />
      <select
        onChange={[Function]}
        value="amount"
      >
        <option
          value="date"
        >
          Date
        </option>
        <option
          value="amount"
        >
          Amount
        </option>
      </select>
      <DateRangePicker
        calendarIcon={
          <svg
            className="react-daterange-picker__calendar-button__icon react-daterange-picker__button__icon"
            height={19}
            stroke="black"
            strokeWidth={2}
            viewBox="0 0 19 19"
            width={19}
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="15"
              width="15"
              x="2"
              y="2"
            />
            <line
              x1="6"
              x2="6"
              y1="0"
              y2="4"
            />
            <line
              x1="13"
              x2="13"
              y1="0"
              y2="4"
            />
          </svg>
        }
        clearIcon={
          <svg
            className="react-daterange-picker__clear-button__icon react-daterange-picker__button__icon"
            height={19}
            stroke="black"
            strokeWidth={2}
            viewBox="0 0 19 19"
            width={19}
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="4"
              x2="15"
              y1="4"
              y2="15"
            />
            <line
              x1="15"
              x2="4"
              y1="4"
              y2="15"
            />
          </svg>
        }
        closeCalendar={true}
        isOpen={null}
        name="daterange"
        onChange={[Function]}
        openCalendarOnFocus={true}
        rangeDivider="–"
        value={
          Array [
            1969-12-31T23:00:00.000Z,
            255600000,
          ]
        }
      >
        <div
          className="react-daterange-picker react-daterange-picker--closed react-daterange-picker--enabled"
          onFocus={[Function]}
        >
          <div
            className="react-daterange-picker__wrapper"
          >
            <DateInput
              className="react-daterange-picker__inputGroup"
              isCalendarOpen={null}
              maxDetail="month"
              name="daterange_from"
              onChange={[Function]}
              returnValue="start"
              value={1969-12-31T23:00:00.000Z}
            >
              <div
                className="react-daterange-picker__inputGroup"
                onClick={[Function]}
              >
                <NativeInput
                  key="date"
                  maxDate={+275760-09-13T00:00:00.000Z}
                  minDate={0000-12-31T23:40:28.000Z}
                  name="daterange_from"
                  onChange={[Function]}
                  value={1969-12-31T23:00:00.000Z}
                  valueType="day"
                >
                  <input
                    max="275760-09-13"
                    min="0001-01-01"
                    name="daterange_from"
                    onChange={[Function]}
                    onFocus={[Function]}
                    style={
                      Object {
                        "position": "absolute",
                        "visibility": "hidden",
                        "zIndex": "-999",
                      }
                    }
                    type="date"
                    value="1970-01-01"
                  />
                </NativeInput>
                <MonthInput
                  className="react-daterange-picker__inputGroup"
                  inputRef={
                    Object {
                      "current": <input
                        autocomplete="off"
                        class="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__month"
                        data-input="true"
                        inputmode="numeric"
                        max="12"
                        min="1"
                        name="month"
                        placeholder="--"
                        type="number"
                        value="1"
                      />,
                    }
                  }
                  key="month"
                  maxDate={+275760-09-13T00:00:00.000Z}
                  minDate={0000-12-31T23:40:28.000Z}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  required={null}
                  value="1"
                  year="1970"
                >
                  <Input
                    className="react-daterange-picker__inputGroup"
                    inputRef={
                      Object {
                        "current": <input
                          autocomplete="off"
                          class="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__month"
                          data-input="true"
                          inputmode="numeric"
                          max="12"
                          min="1"
                          name="month"
                          placeholder="--"
                          type="number"
                          value="1"
                        />,
                      }
                    }
                    max={12}
                    min={1}
                    name="month"
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    required={null}
                    value="1"
                  >
                    <input
                      autoComplete="off"
                      className="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__month"
                      data-input="true"
                      inputMode="numeric"
                      key="input"
                      max={12}
                      min={1}
                      name="month"
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onKeyUp={[Function]}
                      placeholder="--"
                      required={null}
                      type="number"
                      value="1"
                    />
                  </Input>
                </MonthInput>
                <Divider
                  key="separator_1"
                >
                  <span
                    className="react-date-picker__inputGroup__divider"
                  >
                    /
                  </span>
                </Divider>
                <DayInput
                  autoFocus={false}
                  className="react-daterange-picker__inputGroup"
                  inputRef={
                    Object {
                      "current": <input
                        autocomplete="off"
                        class="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__day"
                        data-input="true"
                        inputmode="numeric"
                        max="31"
                        min="1"
                        name="day"
                        placeholder="--"
                        type="number"
                        value="1"
                      />,
                    }
                  }
                  key="day"
                  maxDate={+275760-09-13T00:00:00.000Z}
                  minDate={0000-12-31T23:40:28.000Z}
                  month="1"
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  required={null}
                  value="1"
                  year="1970"
                >
                  <Input
                    autoFocus={false}
                    className="react-daterange-picker__inputGroup"
                    inputRef={
                      Object {
                        "current": <input
                          autocomplete="off"
                          class="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__day"
                          data-input="true"
                          inputmode="numeric"
                          max="31"
                          min="1"
                          name="day"
                          placeholder="--"
                          type="number"
                          value="1"
                        />,
                      }
                    }
                    max={31}
                    min={1}
                    name="day"
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    required={null}
                    value="1"
                  >
                    <input
                      autoComplete="off"
                      autoFocus={false}
                      className="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__day"
                      data-input="true"
                      inputMode="numeric"
                      key="input"
                      max={31}
                      min={1}
                      name="day"
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onKeyUp={[Function]}
                      placeholder="--"
                      required={null}
                      type="number"
                      value="1"
                    />
                  </Input>
                </DayInput>
                <Divider
                  key="separator_2"
                >
                  <span
                    className="react-date-picker__inputGroup__divider"
                  >
                    /
                  </span>
                </Divider>
                <YearInput
                  autoFocus={false}
                  className="react-daterange-picker__inputGroup"
                  inputRef={
                    Object {
                      "current": <input
                        autocomplete="off"
                        class="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__year"
                        data-input="true"
                        inputmode="numeric"
                        max="275760"
                        min="1"
                        name="year"
                        placeholder="----"
                        step="1"
                        type="number"
                        value="1970"
                      />,
                    }
                  }
                  key="year"
                  maxDate={+275760-09-13T00:00:00.000Z}
                  minDate={0000-12-31T23:40:28.000Z}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  required={null}
                  value="1970"
                  valueType="day"
                >
                  <Input
                    autoFocus={false}
                    className="react-daterange-picker__inputGroup"
                    inputRef={
                      Object {
                        "current": <input
                          autocomplete="off"
                          class="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__year"
                          data-input="true"
                          inputmode="numeric"
                          max="275760"
                          min="1"
                          name="year"
                          placeholder="----"
                          step="1"
                          type="number"
                          value="1970"
                        />,
                      }
                    }
                    max={275760}
                    min={1}
                    name="year"
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    placeholder="----"
                    required={null}
                    step={1}
                    value="1970"
                  >
                    <input
                      autoComplete="off"
                      autoFocus={false}
                      className="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__year"
                      data-input="true"
                      inputMode="numeric"
                      key="input"
                      max={275760}
                      min={1}
                      name="year"
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onKeyUp={[Function]}
                      placeholder="----"
                      required={null}
                      step={1}
                      type="number"
                      value="1970"
                    />
                  </Input>
                </YearInput>
              </div>
            </DateInput>
            <span
              className="react-daterange-picker__range-divider"
            >
              –
            </span>
            <DateInput
              className="react-daterange-picker__inputGroup"
              isCalendarOpen={null}
              maxDetail="month"
              name="daterange_to"
              onChange={[Function]}
              returnValue="end"
              value={255600000}
            >
              <div
                className="react-daterange-picker__inputGroup"
                onClick={[Function]}
              >
                <NativeInput
                  key="date"
                  maxDate={+275760-09-13T00:00:00.000Z}
                  minDate={0000-12-31T23:40:28.000Z}
                  name="daterange_to"
                  onChange={[Function]}
                  value={1970-01-03T23:00:00.000Z}
                  valueType="day"
                >
                  <input
                    max="275760-09-13"
                    min="0001-01-01"
                    name="daterange_to"
                    onChange={[Function]}
                    onFocus={[Function]}
                    style={
                      Object {
                        "position": "absolute",
                        "visibility": "hidden",
                        "zIndex": "-999",
                      }
                    }
                    type="date"
                    value="1970-01-04"
                  />
                </NativeInput>
                <MonthInput
                  className="react-daterange-picker__inputGroup"
                  inputRef={
                    Object {
                      "current": <input
                        autocomplete="off"
                        class="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__month"
                        data-input="true"
                        inputmode="numeric"
                        max="12"
                        min="1"
                        name="month"
                        placeholder="--"
                        type="number"
                        value="1"
                      />,
                    }
                  }
                  key="month"
                  maxDate={+275760-09-13T00:00:00.000Z}
                  minDate={0000-12-31T23:40:28.000Z}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  required={null}
                  value="1"
                  year="1970"
                >
                  <Input
                    className="react-daterange-picker__inputGroup"
                    inputRef={
                      Object {
                        "current": <input
                          autocomplete="off"
                          class="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__month"
                          data-input="true"
                          inputmode="numeric"
                          max="12"
                          min="1"
                          name="month"
                          placeholder="--"
                          type="number"
                          value="1"
                        />,
                      }
                    }
                    max={12}
                    min={1}
                    name="month"
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    required={null}
                    value="1"
                  >
                    <input
                      autoComplete="off"
                      className="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__month"
                      data-input="true"
                      inputMode="numeric"
                      key="input"
                      max={12}
                      min={1}
                      name="month"
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onKeyUp={[Function]}
                      placeholder="--"
                      required={null}
                      type="number"
                      value="1"
                    />
                  </Input>
                </MonthInput>
                <Divider
                  key="separator_1"
                >
                  <span
                    className="react-date-picker__inputGroup__divider"
                  >
                    /
                  </span>
                </Divider>
                <DayInput
                  autoFocus={false}
                  className="react-daterange-picker__inputGroup"
                  inputRef={
                    Object {
                      "current": <input
                        autocomplete="off"
                        class="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__day"
                        data-input="true"
                        inputmode="numeric"
                        max="31"
                        min="1"
                        name="day"
                        placeholder="--"
                        type="number"
                        value="4"
                      />,
                    }
                  }
                  key="day"
                  maxDate={+275760-09-13T00:00:00.000Z}
                  minDate={0000-12-31T23:40:28.000Z}
                  month="1"
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  required={null}
                  value="4"
                  year="1970"
                >
                  <Input
                    autoFocus={false}
                    className="react-daterange-picker__inputGroup"
                    inputRef={
                      Object {
                        "current": <input
                          autocomplete="off"
                          class="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__day"
                          data-input="true"
                          inputmode="numeric"
                          max="31"
                          min="1"
                          name="day"
                          placeholder="--"
                          type="number"
                          value="4"
                        />,
                      }
                    }
                    max={31}
                    min={1}
                    name="day"
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    required={null}
                    value="4"
                  >
                    <input
                      autoComplete="off"
                      autoFocus={false}
                      className="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__day"
                      data-input="true"
                      inputMode="numeric"
                      key="input"
                      max={31}
                      min={1}
                      name="day"
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onKeyUp={[Function]}
                      placeholder="--"
                      required={null}
                      type="number"
                      value="4"
                    />
                  </Input>
                </DayInput>
                <Divider
                  key="separator_2"
                >
                  <span
                    className="react-date-picker__inputGroup__divider"
                  >
                    /
                  </span>
                </Divider>
                <YearInput
                  autoFocus={false}
                  className="react-daterange-picker__inputGroup"
                  inputRef={
                    Object {
                      "current": <input
                        autocomplete="off"
                        class="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__year"
                        data-input="true"
                        inputmode="numeric"
                        max="275760"
                        min="1"
                        name="year"
                        placeholder="----"
                        step="1"
                        type="number"
                        value="1970"
                      />,
                    }
                  }
                  key="year"
                  maxDate={+275760-09-13T00:00:00.000Z}
                  minDate={0000-12-31T23:40:28.000Z}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  required={null}
                  value="1970"
                  valueType="day"
                >
                  <Input
                    autoFocus={false}
                    className="react-daterange-picker__inputGroup"
                    inputRef={
                      Object {
                        "current": <input
                          autocomplete="off"
                          class="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__year"
                          data-input="true"
                          inputmode="numeric"
                          max="275760"
                          min="1"
                          name="year"
                          placeholder="----"
                          step="1"
                          type="number"
                          value="1970"
                        />,
                      }
                    }
                    max={275760}
                    min={1}
                    name="year"
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    placeholder="----"
                    required={null}
                    step={1}
                    value="1970"
                  >
                    <input
                      autoComplete="off"
                      autoFocus={false}
                      className="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__year"
                      data-input="true"
                      inputMode="numeric"
                      key="input"
                      max={275760}
                      min={1}
                      name="year"
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onKeyUp={[Function]}
                      placeholder="----"
                      required={null}
                      step={1}
                      type="number"
                      value="1970"
                    />
                  </Input>
                </YearInput>
              </div>
            </DateInput>
            <button
              className="react-daterange-picker__clear-button react-daterange-picker__button"
              onClick={[Function]}
              onFocus={[Function]}
              type="button"
            >
              <svg
                className="react-daterange-picker__clear-button__icon react-daterange-picker__button__icon"
                height={19}
                stroke="black"
                strokeWidth={2}
                viewBox="0 0 19 19"
                width={19}
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="4"
                  x2="15"
                  y1="4"
                  y2="15"
                />
                <line
                  x1="15"
                  x2="4"
                  y1="4"
                  y2="15"
                />
              </svg>
            </button>
            <button
              className="react-daterange-picker__calendar-button react-daterange-picker__button"
              onClick={[Function]}
              onFocus={[Function]}
              type="button"
            >
              <svg
                className="react-daterange-picker__calendar-button__icon react-daterange-picker__button__icon"
                height={19}
                stroke="black"
                strokeWidth={2}
                viewBox="0 0 19 19"
                width={19}
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="none"
                  height="15"
                  width="15"
                  x="2"
                  y="2"
                />
                <line
                  x1="6"
                  x2="6"
                  y1="0"
                  y2="4"
                />
                <line
                  x1="13"
                  x2="13"
                  y1="0"
                  y2="4"
                />
              </svg>
            </button>
          </div>
        </div>
      </DateRangePicker>
    </div>
  </ExpenseListFilters>
</Provider>
`;
